kubernestes/goalapp-api_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: goal-app
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: kaderdevops/tasks_docker_api:latest
        ports:
        - containerPort: 5000
