kubernestes/goalapp-client_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
  namespace: goal-app
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: kaderdevops/tasks_docker_client:latest
        ports:
        - containerPort: 3000
