kubernestes/api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
  namespace: goal-app
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
