kubernestes/client-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
  namespace: goal-app
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
