kubernestes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: goal-app
  annotations:
    # kubernetes.io/spec.ingressClassName: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-clusterip
              port:
                number: 3000
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: api-clusterip
              port:
                number: 5000
